@@ -716,9 +716,10 @@ int
 controller_init(char *controller_port)
 {
     struct sockaddr_storage sock;
+    socklen_t sock_len;
     int    optval = 1;
 
-    if (scan_tcp_port(controller_port, &sock) == -1)
+    if (scan_tcp_port(controller_port, &sock, &sock_len) == -1)
 	return CONTROLLER_INVALID_TCP_SPEC;
     
     acceptfd = socket(sock.ss_family, SOCK_STREAM, 0);
@@ -749,7 +750,7 @@ controller_init(char *controller_port)
 		    ((struct sockaddr *) &sock),
 		    acceptfd);
 
-    if (bind(acceptfd, (struct sockaddr *) &sock, sizeof(sock)) == -1) {
+    if (bind(acceptfd, (struct sockaddr *) &sock, sock_len) == -1) {
 	close(acceptfd);
 	acceptfd = -1;
 	syslog(LOG_ERR, "Unable to bind TCP port: %m");
